[TASK] opdate header CE, add more css var-s, fix hover and active state for the top menu

--- a/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
@@ -156,7 +156,7 @@
 <f:comment>+Accessibility for target _blank link structure</f:comment>
 <f:section name="menuLink">
   <a href="{item.link}"
-    class="{class} {f:if(condition: item.target,then: ' target-blank-link')}"
+    class="{class} {f:if(condition: item.target,then: ' target-blank-link')} {f:if(condition: item.active, then:' active')}"
     {f:if(condition: item.target, then: 'rel="noreferrer"' )}
     {f:if(condition: item.target, then: 'target="_blank"')}
     {f:if(condition: item.current, then: 'aria-current="page"')}>
