small css fix for header CE

--- a/theme/src/css/main/content-elements/site-header.css
+++ b/theme/src/css/main/content-elements/site-header.css
@@ -1,6 +1,5 @@
 .ce-site-header {
   --t3-ce-header-nav-bg: var(--t3-body-color);
-  /* --t3-ce-header-nav-bg: var(--t3-body-bg); */
   --t3-ce-header-nav-color-hs: 0, 0%;
   --t3-ce-header-nav-color-l: 100%;
   --t3-ce-header-nav-color: hsl(var(--t3-ce-header-nav-color-hs), var(--t3-ce-header-nav-color-l));
@@ -443,7 +442,7 @@
 }
 
 .ce-site-header__top-langmenu .ce-site-header__language-menu-link {
-  color: var(--t3-ce-lang-menu-color);
+  color: var(--t3-ce-header-top-color);
 }
 
 .ce-site-header__langmenu .ce-site-header__language-menu-link {
