[TASK] change from tag to class selector

--- a/theme/src/css/main/content-elements/textpic.css
+++ b/theme/src/css/main/content-elements/textpic.css
@@ -57,11 +57,11 @@
   padding: 0;
 }
 
-.ce-textpic figure {
+.ce-textpic .figure {
   display: table;
 }
 
-.ce-textpic figcaption {
+.ce-textpic .figure-caption {
   display: table-caption;
   caption-side: bottom;
 }
