--- a/Resources/Private/Layouts/ContentElements/Default.html
+++ b/Resources/Private/Layouts/ContentElements/Default.html
@@ -1,10 +1,14 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
+<f:if condition="{data.frame_class} == 'internal-padding'">
+  <f:variable name="internal-padding">internal-padding</f:variable>
+</f:if>
+
 <f:if condition="{data.frame_class} != 'none' || {data.space_before_class} || {data.space_after_class}">
   <div class="{f:if(condition: data.frame_class, then: 'frame-{data.frame_class}')}{f:if(condition: data.space_before_class, then: ' {data.space_before_class}')}{f:if(condition: data.space_after_class, then: ' {data.space_after_class}')}">
 </f:if>
 
-<div id="c{data.uid}" class="ctype__{data.CType} {data.background_color_class} {data.color_class}
+<div id="c{data.uid}" class="ctype__{data.CType} {internal-padding} {data.background_color_class} {data.color_class}
   {f:if(condition: data.layout, then: ' {data.layout}')}">
   <f:if condition="{data._LOCALIZED_UID}"><a id="c{data._LOCALIZED_UID}"></a></f:if>
 
