[TASK] update npm dep-s, bootstrap to v5.1.1, swiper to v7.0.6, dev dep-s

--- a/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
+++ b/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
@@ -27,7 +27,7 @@
     <f:variable name="container">container</f:variable>
   </f:if>
 
-  <div class="ce-slider__wrp swiper-container t3kit-swiper-container {container}">
+  <div class="ce-slider__wrp swiper-container swiper t3kit-swiper-container {container}">
     <div class="ce-slider swiper-wrapper">
 
       <f:for each="{records}" as="item" iteration="iteration">
