--- a/theme/src/scss/bootstrap.scss
+++ b/theme/src/scss/bootstrap.scss
@@ -135,5 +135,5 @@ $utilities: map-get-multiple(
 // @import "bootstrap/scss/spinners";
 // @import "bootstrap/scss/toasts";
 // @import "bootstrap/scss/tooltip";
-// @import "bootstrap/scss/accordion";
+@import "bootstrap/scss/accordion";
 @import "bootstrap/scss/transitions";
