[TASK] add options to show first item, have items open, ordering of text, image and files

--- a/Resources/Private/Partials/ContentElements/Bodytext/RTEBodytext.html
+++ b/Resources/Private/Partials/ContentElements/Bodytext/RTEBodytext.html
@@ -3,6 +3,8 @@
 <f:if condition="{data.bodytext}">
   <f:render partial="Bodytext/Render/RTEBodytext" arguments="{
     uid: data.uid,
+    table: table,
+    field: field,
     bodytext: data.bodytext}" />
 </f:if>
 
