--- a/Resources/Private/Partials/ContentElements/Bodytext/Render/RTEBodytext.html
+++ b/Resources/Private/Partials/ContentElements/Bodytext/Render/RTEBodytext.html
@@ -1,6 +1,14 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<t3kit:contentEditable table="tt_content" field="bodytext" uid="{uid}">
+<f:if condition="!{table}">
+  <f:variable name="table" value="tt_content" />
+</f:if>
+
+<f:if condition="!{field}">
+  <f:variable name="field" value="bodytext" />
+</f:if>
+
+<t3kit:contentEditable table="{table}" field="{field}" uid="{uid}">
   <f:format.html>{bodytext}</f:format.html>
 </t3kit:contentEditable>
 
